--- a/static/portfolio.html
+++ b/static/portfolio.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,700,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Young+Serif&display=swap" rel="stylesheet">
     <link href="./styles.css" rel="stylesheet">
+    <script src="./script.js"></script>
     <title>Portfolio - Sanika Jain</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
                     <li><a href="../index.html">home</a></li>
                     <li><a href="about.html">about</a></li>
                     <li><a href="portfolio.html" class="active">portfolio</a></li>
-                    <li><a href="https://drive.google.com/file/d/1GTUg08cvI95OqgpJYHfERNk1mUeq4max/view?usp=sharing" target="_blank">resume</a></li>
+                    <li><a href="resume.html">resume</a></li>
                     <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
@@ -156,7 +157,19 @@
             </section>
         </main>
     </div>
-
-    <script src="./script.js"></script>
+    <footer id="footer">
+        <div class="container">
+            <div class="footer-info">
+                <p>
+                    <a href="mailto:sanikaj@andrew.cmu.edu">Email</a> |
+                    <a href="https://www.linkedin.com/in/sanikajain-/" target="_blank">LinkedIn</a> | 
+                    <a href="https://github.com/sanikaj4" target="_blank">GitHub</a>
+                </p>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2025 Sanika Jain | All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
