--- a/static/contact.html
+++ b/static/contact.html
@@ -9,6 +9,15 @@
     <script src="./script.js"></script>
     <title>Contact - Sanika Jain</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XLK1JNMD8X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XLK1JNMD8X');
+</script>
 <body>
     <div class="container">
         <header>
