--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="index.html" class="active">home</a></li>
                     <li><a href="./static/about.html">about</a></li>
                     <li><a href="./static/portfolio.html">portfolio</a></li>
-                    <li><a href="resume.html">resume</a></li>
+                    <li><a href="./static/resume.html">resume</a></li>
                     <li><a href="./static/contact.html">contact</a></li>
                 </ul>
             </nav>
